fix spacing bug

--- a/src/sass/register.sass
+++ b/src/sass/register.sass
@@ -1,5 +1,3 @@
-
-
 body
 
   .wrap.register
@@ -44,6 +42,7 @@ body
       min-width: 160px
       display: inline-block
       text-align: right
+      font-size: 1rem !important
       font-weight: 400 !important
       padding-right: 12px
 
